--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,15 +90,20 @@ jobs:
           git commit -m "Guardar resultado de Flask desde Job 1"
           git push
 
-  job_2_mysql:
+job_2_mysql:
     name: Job 2 - Verificar MySQL
     runs-on: ubuntu-latest
-    needs: job_1_flask  # Depende de job_1_flask
+    needs: job_1_flask
     steps:
       - name: Obtener el código del repositorio
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Actualizar el repositorio con los últimos cambios
+        run: |
+          git pull origin main
+          echo "Repositorio actualizado con los últimos cambios."
 
       - name: Preparar Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -133,7 +138,7 @@ jobs:
         with:
           name: mysql-status-job-2
           path: mysql_status.txt
-
+          
   run_tests:
     name: Ejecutar validaciones del sistema
     runs-on: ubuntu-latest
