--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,13 +84,16 @@ jobs:
             echo "Forzando creación de archivo con error"
           fi
 
-      - name: Almacenar resultado en el repositorio
+      - name: Verificar y almacenar resultado en el repositorio
         run: |
+          echo "Verificando que flask_result.txt existe..."
+          ls -la
+          cat flask_result.txt
           git add flask_result.txt
           git commit -m "Guardar resultado de Flask desde Job 1"
           git push
 
-job_2_mysql:
+  job_2_mysql:
     name: Job 2 - Verificar MySQL
     runs-on: ubuntu-latest
     needs: job_1_flask
@@ -102,8 +105,20 @@ job_2_mysql:
 
       - name: Actualizar el repositorio con los últimos cambios
         run: |
-          git pull origin main
-          echo "Repositorio actualizado con los últimos cambios."
+          echo "Actualizando el repositorio..."
+          for i in {1..3}; do
+            if git pull origin main; then
+              echo "Repositorio actualizado con los últimos cambios."
+              break
+            else
+              echo "Intento $i/3 falló, reintentando..."
+              sleep 5
+            fi
+          done
+          if [ $i -eq 3 ]; then
+            echo "Error: No se pudo actualizar el repositorio después de 3 intentos."
+            exit 1
+          fi
 
       - name: Preparar Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -138,11 +153,11 @@ job_2_mysql:
         with:
           name: mysql-status-job-2
           path: mysql_status.txt
-          
+
   run_tests:
     name: Ejecutar validaciones del sistema
     runs-on: ubuntu-latest
-    needs: job_2_mysql  # Depende de job_2_mysql
+    needs: job_2_mysql
 
     steps:
       - name: Obtener el código del repositorio
