--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -179,7 +179,7 @@ jobs:
 
       - name: Instalar dependencias de pruebas
         run: |
-          pip install -r requirements-test.txt
+          pip install -r requirements.txt
           pip install pytest requests pytest-html
 
       - name: Listar contenedores activos
